@startuml

title __TP4-DECORATEUR's Class Diagram__\n

  package  {
    package cafe {
      abstract class Boisson {
      }
    }
  }
  

  package  {
    package cafe {
      class BoissonChantilly {
      }
    }
  }
  

  package  {
    package cafe {
      class BoissonCreme {
      }
    }
  }
  

  package  {
    package logo {
      class Chapeau {
      }
    }
  }
  

  package  {
    package cafe {
      class Colombia {
      }
    }
  }
  

  package  {
    package logo {
      class CrazyFrog {
      }
    }
  }
  

  package  {
    package cafe {
      class Deca {
      }
    }
  }
  

  package  {
    package logo {
      abstract class DecorateurAccessoire {
      }
    }
  }
  

  package  {
    package cafe {
      abstract class DecorateurIngredient {
      }
    }
  }
  

  package  {
    package cafe {
      class Expresso {
      }
    }
  }
  

  package  {
    package logo {
      class Friandise {
      }
    }
  }
  

  package  {
    package logo {
      class Lunettes {
      }
    }
  }
  

  package  {
    package logo {
      class Main {
      }
    }
  }
  

  package  {
    package logo {
      abstract class Personnage {
      }
    }
  }
  

  package  {
    package cafe {
      class PrincipaleCafe {
      }
    }
  }
  

  package  {
    package logo {
      class ReneLaTaupe {
      }
    }
  }
  

  package  {
    package logo {
      class Smiley {
      }
    }
  }
  

  BoissonChantilly -up-|> DecorateurIngredient
  BoissonCreme -up-|> DecorateurIngredient
  Chapeau -up-|> DecorateurAccessoire
  Colombia -up-|> Boisson
  CrazyFrog -up-|> Personnage
  Deca -up-|> Boisson
  DecorateurAccessoire -up-|> Personnage
  DecorateurAccessoire o-- Personnage : p
  DecorateurIngredient -up-|> Boisson
  DecorateurIngredient o-- Boisson : composant
  Expresso -up-|> Boisson
  Friandise -up-|> DecorateurAccessoire
  Lunettes -up-|> DecorateurAccessoire
  ReneLaTaupe -up-|> Personnage
  Smiley -up-|> DecorateurAccessoire


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
